# DNSTunnel

./: .gitignore  CMakeLists.txt  Cargo.toml
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs  resolvconf.rs
docs/: format.org
serde/: Cargo.toml
serde/src/: bitmasks.rs  codec.rs  deserializer.rs  lib.rs  serializer.rs
server/: Cargo.toml
server/src/: main.rs
src/main/client/: main.cpp
src/main/common/: constants.h  dns.h
src/main/generator/: dns_generator.cpp  dns_generator.h
src/main/server/: main.cpp  server.cpp  server.h  udp_server.cpp  udp_server.h
tunnel/: Cargo.toml  build.rs
tunnel/src/: lib.rs
tunnel/src/c/: macos.c
